tests/snapshots/prune__01_no_selection_filter.snap
---
source: tests/prune.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-QLesoY/test_prune_validation.db
    - prune
    - "--now"
    - "0001-02-10T00:00:00Z"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Custom { kind: InvalidInput, error: "prune requires at least one selection filter" }
