tests/snapshots/prune__03_missing_false_is_not_filter.snap
---
source: tests/prune.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-QLesoY/test_prune_validation.db
    - prune
    - "--missing"
    - "false"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Custom { kind: InvalidInput, error: "prune requires at least one selection filter" }
