tests/snapshots/prune__05_negative_days.snap
---
source: tests/prune.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-QLesoY/test_prune_validation.db
    - prune
    - "--not-accessed-for"
    - "-1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unexpected argument '-1' found

Usage: frecency prune [OPTIONS]

For more information, try '--help'.
