tests/snapshots/prune__10_last_access_and_update_filters.snap
---
source: tests/prune.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-5DYEJ0/test_prune_time_filters.db
    - prune
    - "--not-accessed-for"
    - "30"
    - "--updated-before"
    - "0001-01-01T02:00:00Z"
    - "--now"
    - "0001-02-10T00:00:00Z"
    - "--dry-run"
    - "false"
---
success: true
exit_code: 0
----- stdout -----
Deleted:
  /stale
Summary: deleted 1 item and 1 access

----- stderr -----
